--- a/ocmoni6/html/s7Query.html
+++ b/ocmoni6/html/s7Query.html
@@ -160,20 +160,21 @@
 
 
 <div class="container-fluid main_content" >
-    <div class="pull-right" style="margin-bottom: 8px">
+    <div class="pull-right clearfix" style="margin-bottom: 8px">
         <button class="btn btn-success btn-sm">新建</button>
         <button class="btn btn-default btn-sm">复制</button>
         <button class="btn btn-default btn-sm">发布</button>
         <button class="btn btn-default btn-sm">截止</button>
     </div>
     <span class="clearfix"></span>
-    <div class="panel panel-default">
+
+    <div class="panel panel-default s7list_panel">
         <div class="panel-heading">
             <h3 class="panel-title">
                 <span class="checkbox-inline">
                     <input  id ="a7" type="checkbox"><label for="a7">全选</label>
                 </span>
-                <span>升舱组描述>升舱子组描述>[0BJ]升舱</span>
+                <span class="marginL15">升舱组描述>升舱子组描述>[0BJ]升舱</span>
             </h3>
         </div>
         <div class="panel-body">
@@ -216,25 +217,23 @@
                         </span>
                 </li>
 
-                <li class="list-group-item s7_list_row">
-                        <span class="s7_list_item s7_list_checkbox ">
-                             <input  type="checkbox">
-                        </span>
-                    <span class="productsImg"></span>
-                        <span class="s7_list_item s7_list_descr text-info marginL15">
-                            这里是描述信息
-                        </span>
-                    <span class="s7_list_item s7_list_seq marginLR15">10356</span>
-                    <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
-                    <span class="s7_list_item  text-danger marginLR15">未发布</span>
-                    <span class="s7_list_item s7_list_price text-success">99998CNY</span>
-                        <span class="s7_list_item pull-right">
-                             <i class="glyphicon glyphicon-search myhand"></i>
-                            <i class="glyphicon glyphicon-pencil marginLR5 myhand"></i>
-                            <i class="glyphicon glyphicon-trash myhand"></i>
-                        </span>
-                </li>
+            </ul>
+        </div>
+    </div>
 
+
+
+    <div class="panel panel-default s7list_panel">
+        <div class="panel-heading">
+            <h3 class="panel-title">
+                <span class="checkbox-inline">
+                    <input  id ="a7" type="checkbox"><label for="a7">全选</label>
+                </span>
+                <span class="marginL15">升舱组描述>升舱子组描述>[0BJ]升舱</span>
+            </h3>
+        </div>
+        <div class="panel-body">
+            <ul class="list-group">
                 <li class="list-group-item s7_list_row">
                         <span class="s7_list_item s7_list_checkbox ">
                              <input  type="checkbox">
@@ -246,7 +245,7 @@
                     <span class="s7_list_item s7_list_seq marginLR15">10356</span>
                     <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
                     <span class="s7_list_item  text-danger marginLR15">未发布</span>
-                    <span class="s7_list_item s7_list_price text-success">99998CNY</span>
+                    <span class="s7_list_item s7_list_price text-success">230CNY</span>
                         <span class="s7_list_item pull-right">
                              <i class="glyphicon glyphicon-search myhand"></i>
                             <i class="glyphicon glyphicon-pencil marginLR5 myhand"></i>
@@ -273,24 +272,6 @@
                         </span>
                 </li>
 
-                <li class="list-group-item s7_list_row">
-                        <span class="s7_list_item s7_list_checkbox ">
-                             <input  type="checkbox">
-                        </span>
-                    <span class="productsImg"></span>
-                        <span class="s7_list_item s7_list_descr text-info marginL15">
-                            这里是描述信息
-                        </span>
-                    <span class="s7_list_item s7_list_seq marginLR15">10356</span>
-                    <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
-                    <span class="s7_list_item  text-danger marginLR15">未发布</span>
-                    <span class="s7_list_item s7_list_price text-success">99998CNY</span>
-                        <span class="s7_list_item pull-right">
-                            <i class="glyphicon glyphicon-search"></i>
-                            <i class="glyphicon glyphicon-pencil marginLR5"></i>
-                            <i class="glyphicon glyphicon-trash"></i>
-                        </span>
-                </li>
             </ul>
         </div>
     </div>
