--- a/ocmoni7/jsp/s7Query.html
+++ b/ocmoni7/jsp/s7Query.html
@@ -293,7 +293,7 @@
 <script type="text/javascript" src="../src/scripts/lib/jq-datepicker/jquery_ui.datepicker-zh-CN.js"></script>
 <script type="text/javascript" src="../src/scripts/lib/jq-timepicker/jquery-timepicker-addon.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-<script type="text/javascript">
+<!--<script type="text/javascript">
     $(function(){
 
         $("#moreQuerySection").hide() ;
@@ -320,6 +320,6 @@
         }) ;
 
     }) ;
-</script>
+</script>-->
 </body>
 </html>
