--- a/ocmoni7/html/s7Query.html
+++ b/ocmoni7/html/s7Query.html
@@ -5,13 +5,14 @@
     <title>s7编译页面</title>
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../dist/commonStyle.css"/>
+
     <script type="text/template" id="s7_panel_template">
         <div class="panel panel-default s7list_panel">
             <div class="panel-heading">
                 <h3 class="panel-title">
-                <span class="checkbox-inline">
-                    <input id="selectAllGroup" type="checkbox"><label for="selectAllGroup">全选</label>
-                </span>
+                    <span class="checkbox-inline">
+                        <input id="selectAllGroup" type="checkbox"><label for="selectAllGroup">全选</label>
+                    </span>
                     <span class="marginL15">升舱组描述>升舱子组描述>[0BJ]升舱</span>
                 </h3>
             </div>
@@ -209,7 +210,12 @@
         </div>
     </div>
     <span class="clearfix"></span>
-    <div id="s7list_container"></div>
+
+    <!--s7显示主区域-->
+    <div id="s7list_container">
+
+
+    </div>
 </div>
 <!--main content end-->
 
