--- a/ocmoni7/src/scripts/s7-query/tpls/s7list.html
+++ b/ocmoni7/src/scripts/s7-query/tpls/s7list.html
@@ -1,33 +1,48 @@
-<%for(var i = 0 ; i < lists.length ; i ++){%>
+<%
+
+for(var i = 0 ; i < data.length ; i ++){
+    var s5 = data[i];
+    var s7list = s5.s7VoList;
+%>
 <div class="panel panel-default s7list_panel">
     <div class="panel-heading">
         <h3 class="panel-title">
-            <span class="checkbox-inline">
-                <input id="selectAllGroup" type="checkbox"><label for="selectAllGroup">全选</label>
-            </span>
-            <span class="marginL15">升舱组描述>升舱子组描述>[0BJ]升舱</span>
+                <span class="checkbox-inline">
+                    <input id="selectAllGroup" type="checkbox"><label for="selectAllGroup">全选</label>
+                </span>
+                <span class="marginL15"><%=s5['basicInfoVo']['serviceGroupDescription']%>&gt;
+                <%=s5['basicInfoVo']['subGroupDescription']%>&gt;[<%=s5['serviceSubCode']%>]<%=s5['commercialName']%></span>
         </h3>
     </div>
     <div class="panel-body">
         <ul class="list-group">
-            <li class="list-group-item s7_list_row">
-                <span class="s7_list_item s7_list_checkbox ">
-                     <input  type="checkbox">
-                </span>
-                <span class="productsImg"></span>
-                <span class="s7_list_item s7_list_descr text-info marginL15">
-                    这里是描述信息
-                </span>
-                <span class="s7_list_item s7_list_seq marginLR15">10356</span>
-                <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
-                <span class="s7_list_item  text-danger marginLR15">未发布</span>
-                <span class="s7_list_item s7_list_price text-success">230CNY</span>
-                <span class="s7_list_item pull-right">
-                    <i class="glyphicon glyphicon-search myhand"></i>
-                    <i class="glyphicon glyphicon-pencil marginLR5 myhand"></i>
-                    <i class="glyphicon glyphicon-trash myhand"></i>
-                </span>
-            </li>
+            <%for(var j = 0 ; j < s7list.length; j++ ){
+                var s7 = s7list[j];
+                var flystatus=' ';
+                var freqFlyStatus=s7.frequentFlyerStatus;
+                if(freqFlyStatus!==null&&freqFlyStatus!=undefined){
+                    flystatus=freqFlyStatus;
+                }
+            %>
+                <li class="list-group-item s7_list_row">
+                        <span class="s7_list_item s7_list_checkbox ">
+                             <input  type="checkbox">
+                        </span>
+                    <span class="productsImg"></span>
+                        <span class="s7_list_item s7_list_descr text-info marginL15">
+                            这里是描述信息
+                        </span>
+                    <span class="s7_list_item s7_list_seq marginLR15">10356</span>
+                    <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
+                    <span class="s7_list_item  text-danger marginLR15">未发布</span>
+                    <span class="s7_list_item s7_list_price text-success">230CNY</span>
+                        <span class="s7_list_item pull-right">
+                            <i class="glyphicon glyphicon-search myhand"></i>
+                            <i class="glyphicon glyphicon-pencil marginLR5 myhand"></i>
+                            <i class="glyphicon glyphicon-trash myhand"></i>
+                        </span>
+                </li>
+            <%}%>
         </ul>
     </div>
 </div>
