--- a/ocmoni6/html/s7Query.html
+++ b/ocmoni6/html/s7Query.html
@@ -198,11 +198,14 @@
                     <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
                     <span class="s7_list_item  text-danger marginLR15">未发布</span>
                     <span class="s7_list_item s7_list_price text-success">230CNY</span>
-                        <span class="s7_list_item pull-right">
-                             <i class="glyphicon glyphicon-search myhand"></i>
-                            <i class="glyphicon glyphicon-pencil marginLR5 myhand"></i>
-                            <i class="glyphicon glyphicon-trash myhand"></i>
-                        </span>
+                    <span class="s7_list_item  s7_list_level text-info">成人[白金卡]</span>
+                    <span class="s7_list_item s7_list_geo">BJS(C) - SHA(C)</span>
+
+                    <span class="s7_list_item pull-right">
+                         <i class="glyphicon glyphicon-search myhand"></i>
+                        <i class="glyphicon glyphicon-pencil marginLR5 myhand"></i>
+                        <i class="glyphicon glyphicon-trash myhand"></i>
+                    </span>
                 </li>
 
                 <li class="list-group-item s7_list_row">
@@ -217,11 +220,13 @@
                     <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
                     <span class="s7_list_item  text-danger marginLR15">未发布</span>
                     <span class="s7_list_item s7_list_price text-success">99998CNY</span>
-                        <span class="s7_list_item pull-right">
-                            <i class="glyphicon glyphicon-search myhand"></i>
-                            <i class="glyphicon glyphicon-pencil marginLR5 myhand"></i>
-                            <i class="glyphicon glyphicon-trash myhand"></i>
-                        </span>
+                    <span class="s7_list_item  s7_list_level text-info"></span>
+                    <span class="s7_list_item s7_list_geo">BJS(C) - SHA(C)</span>
+                    <span class="s7_list_item pull-right">
+                        <i class="glyphicon glyphicon-search myhand"></i>
+                        <i class="glyphicon glyphicon-pencil marginLR5 myhand"></i>
+                        <i class="glyphicon glyphicon-trash myhand"></i>
+                    </span>
                 </li>
 
             </ul>
