--- a/ocmoni7/html/s7Query.html
+++ b/ocmoni7/html/s7Query.html
@@ -293,8 +293,10 @@
 </form>
 
 <script type="text/javascript" src="../../bower_components/jquery/dist/jquery.js"></script>
+<!--
 <script type="text/javascript" src="../dist/s7Query.js"></script>
-<!--<script type="text/javascript" src="../src/scripts/lib/jq-datepicker/jquery_ui.js"></script>
+-->
+<script type="text/javascript" src="../src/scripts/lib/jq-datepicker/jquery_ui.js"></script>
 <script type="text/javascript" src="../src/scripts/lib/jq-datepicker/jquery_ui.datepicker-zh-CN.js"></script>
 <script type="text/javascript" src="../src/scripts/lib/jq-timepicker/jquery-timepicker-addon.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -325,6 +327,6 @@
         }) ;
 
     }) ;
-</script>-->
+</script>
 </body>
 </html>
