--- a/ocmoni6/html/s7Query.html
+++ b/ocmoni6/html/s7Query.html
@@ -187,21 +187,21 @@
         <div class="panel-body">
             <ul class="list-group">
                 <li class="list-group-item s7_list_row">
-                        <span class="s7_list_item s7_list_checkbox ">
-                             <input  type="checkbox">
-                        </span>
-                    <span class="productsImg"></span>
-                        <span class="s7_list_item s7_list_descr text-info marginL15">
-                            这里是描述信息
-                        </span>
-                    <span class="s7_list_item s7_list_seq marginLR15">10356</span>
-                    <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
-                    <span class="s7_list_item  text-danger marginLR15">未发布</span>
+                    <span class="s7_list_item s7_list_checkbox ">
+                         <input  type="checkbox">
+                    </span>
+                    <span class="s7_list_item productsImg"></span>
+                    <span class="s7_list_item s7_list_descr text-info">
+                        这里是描述信息
+                    </span>
+                    <span class="s7_list_item s7_list_seq">10356</span>
+                    <span class="s7_list_item s7_list_date text-primary ">2016-05-24—2016-05-25</span>
+                    <span class="s7_list_item s7_list_status text-danger ">未发布</span>
                     <span class="s7_list_item s7_list_price text-success">230CNY</span>
-                    <span class="s7_list_item  s7_list_level text-info">成人[白金卡]</span>
+                    <span class="s7_list_item s7_list_level text-info">成人[白金卡]</span>
                     <span class="s7_list_item s7_list_geo">BJS(C) - SHA(C)</span>
 
-                    <span class="s7_list_item pull-right">
+                    <span class="s7_list_item s7_list_oper pull-right">
                          <i class="glyphicon glyphicon-search myhand"></i>
                         <i class="glyphicon glyphicon-pencil marginLR5 myhand"></i>
                         <i class="glyphicon glyphicon-trash myhand"></i>
