--- a/ocmoni7/src/scripts/s7-edit/tpls/thead.html
+++ b/ocmoni7/src/scripts/s7-edit/tpls/thead.html
@@ -1,13 +1,13 @@
 <%if("tb183.html"==value){%>
 <tr>
-	<th width="62px">旅行社</th>
-	<th width="100px">航空公司/分销商</th>
-	<th width="76px">职责/功能码</th>
-	<th width ="80px">区域类型</th>
-	<th width ="65px">区域代码</th>
-	<th width ="150px">发布对象类型</th>
-	<th width ="87px">发布对象代码</th>
-	<th width ="110px">权限</th>
+	<th width="62">旅行社</th>
+	<th width="100">航空公司/分销商</th>
+	<th width="76">职责/功能码</th>
+	<th width ="80">区域类型</th>
+	<th width ="65">区域代码</th>
+	<th width ="150">发布对象类型</th>
+	<th width ="87">发布对象代码</th>
+	<th width ="110">权限</th>
 </tr>
 <%}else if("tb171.html"==value){%>
 <tr>
@@ -44,13 +44,13 @@
 </tr>
 <%}else if ("tb198.html"==value){%>
 <tr>
-	<th>市场方/承运方</th>
-	<th>航空公司</th>
-	<th>订座舱位1</th>
-	<th>订座舱位2</th>
-	<th>订座舱位3</th>
-	<th>订座舱位4</th>
-	<th>订座舱位5</th>
+	<th width="120">市场方/承运方</th>
+	<th width ="80">航空公司</th>
+	<th width ="80">订座舱位1</th>
+	<th width ="80">订座舱位2</th>
+	<th width ="80">订座舱位3</th>
+	<th width ="80">订座舱位4</th>
+	<th width ="80">订座舱位5</th>
 </tr>
 <%}else if("tb198UpGrade.html"==value){%>
 <tr>
