--- a/ocmoni7/src/scripts/s7-edit/tpls/table.html
+++ b/ocmoni7/src/scripts/s7-edit/tpls/table.html
@@ -5,17 +5,8 @@
 <tbody>
 </tbody>
 </table>
-<div class="helper_margin_top5">
-	<div class="btn_page btn_add_small">
-    	<div class="btn_left"></div>
-        <div class="btn_content add_line" >增加一行</div>
-        <div class="btn_right"></div>
-    </div>
-	<div class="btn_page btn_add_small_2">
-    	<div class="btn_left"></div>
-		<div class="btn_content delete_line">删除一行</div>
-        <div class="btn_right"></div>
-    </div>
-	<div class="clearfix"></div>
+<div class="table_footer">
+    <button class="btn btn-success btn-sm add_line">增加一行</button>
+    <button class="btn btn-default btn-sm delete_line">删除一行</button>
 </div>
 </div>
