--- a/ocmoni6/html/datasourceQuery.html
+++ b/ocmoni6/html/datasourceQuery.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../styles/css/jquery_ui.datepicker-modify.css"/>
     <link rel="stylesheet" href="../styles/css/jquery-ui-timepicker-addon.css"/>
-    <link rel="stylesheet" href="../styles/css/common.css">
-    <link rel="stylesheet" href="../styles/css/s7Query.css"/>
+    <link rel="stylesheet" href="../styles/css/oc_common.css">
+    <link rel="stylesheet" href="../styles/css/oc_query.css"/>
 </head>
 <body>
 
