数据源查询页面新样式完成

--- a/ocmoni6/html/s7Query.html
+++ b/ocmoni6/html/s7Query.html
@@ -83,7 +83,7 @@
                 <div class="checkbox marginLR15">
                     <input  id ="showHideMoreQuerySectionBtn" type="checkbox"> <label for="showHideMoreQuerySectionBtn">更多条件</label>
                 </div>
-                <button type="submit" class="btn btn-default btn-sm btn-primary">查询</button>
+                <button type="submit" class="btn btn-sm btn-primary">查询</button>
             </div>
             <!--query row1 end-->
 
