--- a/ocmoni6/html/datasourceQuery.html
+++ b/ocmoni6/html/datasourceQuery.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="../styles/css/jquery-ui-timepicker-addon.css"/>
     <link rel="stylesheet" href="../styles/css/oc_common.css">
     <link rel="stylesheet" href="../styles/css/oc_query.css"/>
+    <style>
+        .main_content{
+            padding-top: 150px;
+        }
+    </style>
 </head>
 <body>
 
@@ -43,70 +48,170 @@
         <form class="form-inline">
             <!--query row1 start-->
             <div class="query_row">
-                <span class="query_title">基础信息</span>
+                <span class="marginL10"></span>
                 <div class="form-group">
-                    <div class="checkbox">
-                        <input id ="c1" type="checkbox"><label for="c1">未发布</label>
-                    </div>
-                    <div class="checkbox">
-                        <input id ="c2" type="checkbox"><label for="c2">已发布</label>
-                    </div>
-
-                    <div class="checkbox">
-                        <input  id ="c3" type="checkbox"><label for="c3"> 未生效</label>
-                    </div>
-                    <div class="checkbox">
-                        <input  id ="c4" type="checkbox"> <label for="c4">已生效</label>
-                    </div>
-                    <div class="checkbox">
-                        <input  id ="c5" type="checkbox"> <label for="c5">已过期</label>
-                    </div>
+                    <label  class="marginR5">航空公司</label>
+                    <input type="text" class="form-control input-sm" style="width: 120px" placeholder="CA" />
                 </div>
                 <span class="marginR15"></span>
                 <div class="form-group">
-                    <label  class="marginR5">服务</label>
-                    <select class="form-control">
-                        <option>商务名称</option>
-                        <option>子代码</option>
-                    </select>
-                    <input type="email" class="form-control input-sm" style="width: 100px">
+                    <label  class="marginR5">子代码</label>
+                    <input type="text" class="form-control" style="width: 120px" placeholder="CA" />
                 </div>
                 <div class="form-group">
-                    <label class="marginR5">销售日期</label>
-                    <input type="text" class="form-control input-sm datepicker"  placeholder="起始日期" style="width: 100px">
+                    <label class="marginR5">生效日期</label>
+                    <input type="text" class="form-control input-sm datepicker"  placeholder="范围" style="width: 100px">
                     <span class="glyphicon glyphicon-th iconfont_box"></span>
-                    <span class="marginL15"></span>
-                    <input type="text" class="form-control input-sm datepicker"  placeholder="结束日期" style="width: 100px">
+                    <span>——</span>
+                    <input type="text" class="form-control input-sm datepicker"  placeholder="范围" style="width: 100px">
                     <span class="glyphicon glyphicon-th iconfont_box"></span>
                 </div>
 
-                <div class="checkbox marginLR15">
-                    <input  id ="showHideMoreQuerySectionBtn" type="checkbox"> <label for="showHideMoreQuerySectionBtn">更多条件</label>
+                <div class="form-group">
+                    <label class="marginR5">数据源</label>
+                    <select class="form-control" style="width: 100px;">
+                        <option value="">选择</option>
+                        <option value="">1</option>
+                    </select>
                 </div>
-                <button type="submit" class="btn btn-default btn-sm btn-primary">查询</button>
+
+                <div class="form-group">
+                    <label class="marginR5">行程种类</label>
+                    <select class="form-control" style="width: 100px;">
+                        <option value="">选择</option>
+                        <option value="">1</option>
+                    </select>
+                </div>
+                <span class="marginR10"></span>
+                <button type="submit" class="btn btn-sm btn-primary">查询</button>
+                <button type="submit" class="btn btn-sm btn-success">新建</button>
             </div>
             <!--query row1 end-->
+
+            <div class="query_row">
+                <span class="marginL10"></span>
+                <div class="form-group">
+                    <label  class="marginR5">部门代码</label>
+                    <input type="text" class="form-control input-sm" style="width: 120px" placeholder="CA" />
+                </div>
+                <span class="marginL10"></span>
+                <div class="form-group">
+                    <label  class="marginR5">服务类型</label>
+                    <div class="checkbox">
+                        <input  id ="c1" type="checkbox"><label for="c1">免费行李</label>
+                    </div>
+                    <div class="checkbox">
+                        <input  id ="c2" type="checkbox"><label for="c2">随携行李</label>
+                    </div>
+                    <div class="checkbox">
+                        <input  id ="c3" type="checkbox"><label for="c3">付费行李</label>
+                    </div>
+                    <div class="checkbox">
+                        <input  id ="c4" type="checkbox"><label for="c4">预付费行李</label>
+                    </div>
+                    <div class="checkbox">
+                        <input  id ="c5" type="checkbox"><label for="c5">禁运行李</label>
+                    </div>
+                </div>
+            </div>
 
         </form>
     </div>
     <!--query section end-->
 </div>
 
-
 <div class="container-fluid main_content" >
     <div class="panel panel-default s7list_panel">
-        <div class="panel-heading">
-            <h3 class="panel-title">
-                <span class="checkbox-inline">
-                    <input  id ="a7" type="checkbox"><label for="a7">全选</label>
-                </span>
-                <span class="marginL15">升舱组描述>升舱子组描述>[0BJ]升舱</span>
-            </h3>
-        </div>
         <div class="panel-body">
-            <ul class="list-group">
+            <table class="table">
+                <thead>
+                <tr class="active">
+                    <th>序列号</th>
+                    <th>服务类型</th>
+                    <th>子代码</th>
+                    <th>部门代码</th>
+                    <th>行程种类</th>
+                    <th>生效日期</th>
+                    <th>截止日期</th>
+                    <th>数据源</th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">103003</th>
+                    <td>*</td>
+                    <td>*</td>
+                    <td>*</td>
+                    <td>国际</td>
+                    <td>2015-11-13</td>
+                    <td>2015-11-28</td>
+                    <td>ATPCO数据</td>
+                    <td>
+                        <i class="glyphicon glyphicon-pencil myhand"></i>
+                        <i class="glyphicon glyphicon-trash myhand marginL5"></i>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">103003</th>
+                    <td>*</td>
+                    <td>*</td>
+                    <td>*</td>
+                    <td>国际</td>
+                    <td>2015-11-13</td>
+                    <td>2015-11-28</td>
+                    <td>ATPCO数据</td>
+                    <td>
+                        <i class="glyphicon glyphicon-pencil myhand"></i>
+                        <i class="glyphicon glyphicon-trash myhand marginL5"></i>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">103003</th>
+                    <td>*</td>
+                    <td>*</td>
+                    <td>*</td>
+                    <td>国际</td>
+                    <td>2015-11-13</td>
+                    <td>2015-11-28</td>
+                    <td>ATPCO数据</td>
+                    <td>
+                        <i class="glyphicon glyphicon-pencil myhand "></i>
+                        <i class="glyphicon glyphicon-trash myhand marginL5"></i>
+                    </td>
+                </tr>
 
-            </ul>
+                <tr>
+                    <th scope="row">103003</th>
+                    <td>*</td>
+                    <td>*</td>
+                    <td>*</td>
+                    <td>国际</td>
+                    <td>2015-11-13</td>
+                    <td>2015-11-28</td>
+                    <td>ATPCO数据</td>
+                    <td>
+                        <i class="glyphicon glyphicon-pencil myhand "></i>
+                        <i class="glyphicon glyphicon-trash myhand marginL5"></i>
+                    </td>
+                </tr>
+
+                <tr>
+                    <th scope="row">103003</th>
+                    <td>*</td>
+                    <td>*</td>
+                    <td>*</td>
+                    <td>国际</td>
+                    <td>2015-11-13</td>
+                    <td>2015-11-28</td>
+                    <td>ATPCO数据</td>
+                    <td>
+                        <i class="glyphicon glyphicon-pencil myhand "></i>
+                        <i class="glyphicon glyphicon-trash myhand marginL5"></i>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
