数据源的修改界面html完成

--- a/ocmoni6/html/datasourceQuery.html
+++ b/ocmoni6/html/datasourceQuery.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>s7编译页面</title>
+    <title>数据源查询页面</title>
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../styles/css/jquery_ui.datepicker-modify.css"/>
     <link rel="stylesheet" href="../styles/css/jquery-ui-timepicker-addon.css"/>
@@ -82,9 +82,11 @@
                         <option value="">1</option>
                     </select>
                 </div>
-                <span class="marginR10"></span>
-                <button type="submit" class="btn btn-sm btn-primary">查询</button>
-                <button type="submit" class="btn btn-sm btn-success">新建</button>
+
+                <span class="pull-right marginR15">
+                    <button type="submit" class="btn btn-sm btn-primary">查询</button>
+                    <button type="submit" class="btn btn-sm btn-success">新建</button>
+                </span>
             </div>
             <!--query row1 end-->
 
