--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>s7编译页面</title>
+    <title>s7编辑页面</title>
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../../bower_components/pure/grids.css"/>
     <link rel="stylesheet" href="../styles/css/jquery.autocomplete.css"/>
@@ -925,8 +925,10 @@
 
 
 <script type="text/javascript" src="../../bower_components/jquery/dist/jquery.js"></script>
+<!--
 <script type="text/javascript" src="../../bower_components/moment/moment.js"></script>
 <script type="text/javascript" src="../../bower_components/moment/locale/zh-cn.js"></script>
+-->
 <script type="text/javascript" src="../lib/tui-core/tui_core.js"></script>
 <script type="text/javascript" src="../lib/tui-drag/tui_drag.js"></script>
 <script type="text/javascript" src="../lib/tui-dialog/tui_dialog.js"></script>
