--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -130,7 +130,7 @@
             <!--描述 strart-->
             <div class="content_layout">
                 <span class="left">描述</span>
-                <span class="right">
+                <div class="right">
                    <div class="form-group">
                        <label for="inputEmail3" class="pure-u-1-8 control-label">销售生效日期</label>
                        <div class="pure-u-1-4">
@@ -180,13 +180,13 @@
                             </div>
                         </div>
                     </div>
-                </span>
+                </div>
             </div>
             <!--描述 end-->
             <!--费用 strart-->
             <div class="content_layout">
                 <span class="left">费用</span>
-                <span class="right">
+                <div class="right">
                    <div class="form-group">
                        <label class="pure-u-1-8 control-label">是否收费</label>
                        <div class="pure-u-1-4">
@@ -322,7 +322,7 @@
                             <span class="radio-inline"> <input type="radio" /><label class="radioLabel">无</label></span>
                          </div>
                      </div>
-                </span>
+                </div>
             </div>
             <!--费用 end-->
         </div>
@@ -336,21 +336,21 @@
             <!--序号 strart-->
             <div class="content_layout">
                 <span class="left">序号</span>
-                <span class="right">
+                <div class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">优先级序号</label>
                         <div class="pure-u-1-4">
                             <input type="text" class="form-control input-sm"  >
                         </div>
                     </div>
-                </span>
+                </div>
             </div>
             <!--序号 end-->
 
             <!--旅客 strart-->
             <div class="content_layout">
                 <span class="left">旅客</span>
-                <span class="right">
+                <div class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">旅客范围</label>
                         <div class="pure-u-1-4">
@@ -425,14 +425,14 @@
                             </div>
                         </div>
                     </div>
-                </span>
+                </div>
             </div>
             <!--旅客 end-->
 
             <!--发布 strart-->
             <div class="content_layout">
                 <span class="left">发布</span>
-                <span class="right">
+                <div class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">发布对象</label>
                         <div class="pure-u-1-2 control_right_content">
@@ -480,14 +480,14 @@
                         </div>
                     </div>
 
-                </span>
+                </div>
             </div>
             <!--发布 end-->
 
             <!--航程 strart-->
             <div class="content_layout">
                 <span class="left">航程</span>
-                <span class="right">
+                <div class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">区域限制</label>
                         <div class="pure-u-1-2">
@@ -601,14 +601,14 @@
                             </div>
                         </div>
                     </div>
-                </span>
+                </div>
             </div>
             <!--航程 end-->
 
             <!--航班 strart-->
             <div class="content_layout">
                 <span class="left">航班</span>
-                <span class="right">
+                <div class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">旅行开始日期</label>
                         <div class="pure-u-1-4">
@@ -713,14 +713,14 @@
                             </select>
                         </div>
                     </div>
-                </span>
+                </div>
             </div>
             <!--航班 end-->
 
             <!--购买 strart-->
             <div class="content_layout">
                 <span class="left">购买</span>
-                <span class="right">
+                <div class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">提前购票时间</label>
                         <div class="pure-u-1-8">
@@ -734,14 +734,14 @@
                             </select>
                         </div>
                     </div>
-                </span>
+                </div>
             </div>
             <!--购买 end-->
 
             <!--兑换 strart-->
             <div class="content_layout">
                 <span class="left">兑换</span>
-                <span class="right">
+                <div class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">允许兑换的服务</label>
                         <div class="pure-u-1-4 control_right_content">
@@ -824,14 +824,14 @@
                             </div>
                         </div>
                     </div>
-                </span>
+                </div>
             </div>
             <!--兑换 end-->
 
             <!--票价 strart-->
             <div class="content_layout">
                 <span class="left">票价</span>
-                <span class="right">
+                <div class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">旅行编码</label>
                         <div class="pure-u-1-4">
@@ -868,14 +868,14 @@
                             <a href="">填写表格</a>
                         </div>
                     </div>
-                </span>
+                </div>
             </div>
             <!--票价 end-->
 
             <!--票证 strart-->
             <div class="content_layout">
                 <span class="left">票证</span>
-                <span class="right">
+                <div class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">与机票同时出票</label>
                         <div class="pure-u-1-4">
@@ -883,14 +883,14 @@
                             <div class="radio-inline"><input type="radio"/><label>否</label></div>
                         </div>
                     </div>
-                </span>
+                </div>
             </div>
             <!--票证 end-->
 
             <!--退款 strart-->
             <div class="content_layout">
                 <span class="left">退款</span>
-                <span class="right">
+                <div class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">是否可退</label>
                         <div class="pure-u-1-4">
@@ -911,7 +911,7 @@
                             </select>
                         </div>
                     </div>
-                </span>
+                </div>
             </div>
             <!--退款 end-->
 
